[tool.poetry]
name = "symspell"
version = "0.1.0"
description = ""
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
symspellpy = "^6.7.6"
tqdm = "^4.64.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
